fix flicker issue

--- a/src/sass/views/tab-send.scss
+++ b/src/sass/views/tab-send.scss
@@ -71,4 +71,5 @@
       }
     }
   }
+  .scroll{height: 100%;}
 }
